<resources>
    <string name="app_name">Sudoku</string>
    <string name="cont">Continue</string>
    <string name="new_game">New Game</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="main_title">Android Sudoku</string>
    <string name="about_title">About Android Sudoku</string>
    <string name="about_text">\ Sudoku is a logic-based number placement puzzle.
        Starting with a partially completed 9x9 grid, the objective is to fill the grid
        so that each row, each column, and each of the 3x3 boxes (also called <i>blocks</i>)
        contains the digits 1 to 9 exactly once. </string>

</resources>
