<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sudoku"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="com.example.ananya.sudoku.Sudoku"
    android:weightSum="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
    <TextView
        android:text="@string/main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30dp"
        android:layout_marginBottom="25dp"
        android:textColor="@color/textcolour"
        android:id="@+id/AndroidSudoku" />

    <Button
        android:text="@string/cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cont" />

    <Button
    android:text="@string/about"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/about" />

    <Button
        android:text="@string/new_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newgame" />

    <Button
android:text="@string/exit"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:id="@+id/exit" />
    </LinearLayout>
</LinearLayout>
